# lite-xl-web

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  manifest.json
.github/workflows/: release-binaries.yml
plugins/web/: init.lua
src/: lxl_web_macos.m  lxl_web_stub.c
tests/: test_dlopen.c
